manifests/02_web-A-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-a-deploy
  namespace: web
  labels:
    app: web-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-a
  template:
    metadata:
      labels:
        app: web-a
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: static-content
          mountPath: /usr/share/nginx/html
      volumes:
      - name: static-content
        configMap:
          name: web-a-cfg
