manifests/03_web-A-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-a-svc
  namespace: web
spec:
  selector:
    app: web-a
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
