manifests/04_web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: my.com # add to /etc/hosts:  127.0.0.1    my.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-a-svc
            port:
              number: 80
